# groot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DNS.cpp  DNS.sln  DNS.vcxproj  DNS.vcxproj.filters  Dockerfile  LICENSE  README.md  RR.cpp  RR.h  graph.h  groot.sln  interpreter.cpp  interpreter.h  label_graph.cpp  setup.sh  zone.h  zone_graph.cpp  zone_parser.cpp
.github/workflows/: buildandtest.yml  codeql-analysis.yml  dockerimage.yml
DNS/: DNS.vcxproj  DNS.vcxproj.filters  RR.h  graph.h  input.json  interpreter.cpp  interpreter.h  label_graph.cpp  properties.cpp  properties.h  zone_graph.cpp
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  tests.filters
Tests/SerializedGraphs/interpretationGraphs/: 1.txt  10.txt  115.txt  119.txt  12.txt  120.txt  122.txt  133.txt  135.txt  139.txt  140.txt  142.txt  150.txt  152.txt  153.txt  22.txt  39.txt  43.txt  68.txt  76.txt  79.txt  82.txt  92.txt  99.txt
Tests/TrialZones/: mtn.net.sy.txt  net.sy.txt
benchmark/: properties.json  root.txt
benchmark/zone_files/: metadata.json  root.txt
demo/: child.mtn.net.sy (2).txt  child.mtn.net.sy.txt  jobs.json  net.sy.txt  properties.json  userInput.json
demo/zone_files/: child.mtn.net.sy-2.txt  child.mtn.net.sy.txt  metadata.json  mtn.net.sy.txt
groot/: UCLA.json  groot.cpp  groot.vcxproj  groot.vcxproj.filters
groot_lib/: CMakeLists.txt  csvparser.cpp  csvparser.h  graph.h  groot.vcxproj.filters  groot_lib.vcxproj  input.json  interpreter.cpp  interpreter.h  label_graph.cpp  label_graph.h  myLogger.h  properties.cpp  properties.h  resource_record.cpp  resource_record.h  zone.h  zone_graph.cpp  zone_parser.cpp
groot_lib/tests/: test1.txt
src/: CMakeLists.txt  EC-task.cpp  EC-task.h  RR.cpp  concurrentqueue.h  context.h  driver.cpp  driver.h  ec-task.cpp  ec-task.h  equivalence-class.cpp  equivalence-class.h  graph.h  groot.cpp  groot.vcxproj  groot.vcxproj.filters  interpretation-graph.cpp  interpretation-properties.h  interpreter.cpp  interpreter.h  job.h  label-graph.cpp  label-graph.h  label_graph.cpp  libgroot.vcxproj  my_logger.h  node-label.cpp  node-label.h  properties.cpp  properties.h  resource-record.cpp  resource-record.h  resource_record.cpp  resource_record.h  structural-task.cpp  structural-task.h  task.h  utils.cpp  utils.h  zone-file-parser.cpp  (+5 more)
test/: CMakeLists.txt  bankcardTest.cpp  demo-test.cpp  driver-test.h  driver_test.cpp  ec-test.cpp  integration-test.cpp  label-graph-test.cpp  main-example-test.cpp  script.py  test.vcxproj  tester.cpp  util-test.cpp  zone-graph-test.cpp
test/ExampleZones/: child.mtn.net.sy (2).txt  mtn.net.sy.txt  test_parser.txt
test/SerializedGraphs/: ECs.txt  sy.net.--ns1.tld.sy..txt  sy.net.mtn.--ns1.mtn.net.sy..txt  sy.net.mtn.child.--ns2.child.mtn.net.sy..txt
test/SerializedGraphs/interpretationGraphs/: 0.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  109.txt  110.txt  111.txt  112.txt  114.txt  117.txt  118.txt  121.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  131.txt  132.txt  134.txt  136.txt  137.txt  138.txt  14.txt  141.txt  144.txt  145.txt  146.txt  147.txt  148.txt  15.txt  151.txt  16.txt  (+62 more)
test/TestFiles/bankcardExample/: jobs.json
test/TestFiles/bankcardExample/zone_files/: a.gtld-servers.net.txt  metadata.json  ns1.fnni.com.1.txt  ns1.fnni.com.2.txt  ns2.fnni.net.1.txt  ns2.fnni.net.2.txt
test/TestFiles/cc.il.us/: ig_expected.dot  jobs.json  label_graph_expected.dot
test/TestFiles/cc.il.us/zone_files/: cc.il.us..txt  cc.tx.us..txt  child.richland.cc.il.us.-2.txt  child.richland.cc.il.us..txt  metadata.json  richland.cc.il.us..txt
test/TestFiles/choice/: jobs.json
test/TestFiles/choice/zone_files/: NS1.com.txt  NS2.com.txt  metadata.json  start.com.txt
test/TestFiles/dname_loop_parent/zone_files/: inf.net.txt
test/TestFiles/infinite/: jobs.json
test/TestFiles/infinite/zone_files/: inf.net.txt  metadata.json
test/TestFiles/integration_tests/simple_test/: expected.json  lint_expected.json
test/TestFiles/integration_tests/simple_test/zone_files/: foo.com.txt  metadata.json
test/TestFiles/parser_tests/: test_parser.txt
test/TestFiles/short/zone_files/: inf.net.txt  metadata.json
test/TestFiles/simple_test/: jobs.json
tests/: driver_test.cpp  tests.cpp  tests.vcxproj
tests/Demo/: mtn.net.sy.txt
tests/ExampleZones/: child.mtn.net.sy.txt  test_lexer.txt  test_parser.txt
tests/SerializedGraphs/: labelgraph.txt  sy.net.mtn.child.--ns1.child.mtn.net.sy..txt
tests/SerializedGraphs/interpretationGraphs/: 108.txt  11.txt  113.txt  116.txt  13.txt  130.txt  143.txt  149.txt  18.txt  2.txt  28.txt  29.txt  3.txt  36.txt  38.txt  40.txt  45.txt  49.txt  57.txt  61.txt  66.txt  7.txt  73.txt  84.txt  86.txt  89.txt  93.txt  94.txt
